[gd_scene load_steps=7 format=3 uid="uid://ba45mc2juhcwt"]

[ext_resource type="Texture2D" uid="uid://ci0dt4why4n6l" path="res://assets/bg/tablet_bg.png" id="1_0eu6r"]
[ext_resource type="Script" path="res://src/scripts/statistic.gd" id="1_mwna4"]
[ext_resource type="PackedScene" uid="uid://bprqmeqewkl7i" path="res://src/scenes/game_elements/hud.tscn" id="2_hgpt4"]
[ext_resource type="Theme" uid="uid://cuxkfo2hoq3nw" path="res://assets/themes/big_button.tres" id="3_d531b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i4f34"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dna37"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.960784, 0.321569, 0.517647, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="Statistic" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mwna4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_0eu6r")
expand_mode = 1

[node name="Hud" parent="." instance=ExtResource("2_hgpt4")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 94
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 102
theme_override_constants/margin_bottom = 57

[node name="PanelBg" type="Panel" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i4f34")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 55
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(650, 410)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_dna37")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 30

[node name="Separator" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NameStage" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Статистика игрового дня"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="Clients" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Clients"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Обслужено клиентов:"
horizontal_alignment = 2

[node name="NumberClient" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Clients"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "7/7"
horizontal_alignment = 2

[node name="Rating" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Rating"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Новый рейтинг:"
horizontal_alignment = 2

[node name="NewRating" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Rating"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "4.7"
horizontal_alignment = 2

[node name="Consumption" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Consumption"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Расходы:"
horizontal_alignment = 2

[node name="NumberConsumption" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Consumption"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "120"
horizontal_alignment = 2

[node name="Income" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Income"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Доходы:"
horizontal_alignment = 2

[node name="NumberIncome" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Income"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1000"
horizontal_alignment = 2

[node name="Profit" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Profit"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Прибыль:"
horizontal_alignment = 2

[node name="NumberProfit" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Profit"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0619715, 0.651531, 0, 1)
theme_override_font_sizes/font_size = 30
text = "+880"
horizontal_alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="DiffRating" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0627451, 0.65098, 0, 1)
theme_override_font_sizes/font_size = 30
text = "+1.2"
horizontal_alignment = 2

[node name="Continue" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(215, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("3_d531b")
theme_override_font_sizes/font_size = 45
text = "Продолжить"
